<resources>
    <string name="Headphone_selected">Headphone selected:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_dts">About DTS</string>
    <string name="about_facebook_button">Like us on <b>Facebook</b></string>
    <string name="about_product">DTS:X Ultra</string>
    <string name="about_text_copyright">© DTS, Inc. All rights reserved.</string>
    <string name="about_text_main1">"We exist to make the world sound better.

We imagine a world where every experience, on any device, sounds simply incredible. DTS&lt;sup>®&lt;/sup>delivers the best surround experience at the cinema, in the car, in the home, over your TV and PC or anywhere you go with your mobile devices together with your favorite pair of headphones.

Check out DTS online to learn more."</string>
    <string name="about_twitter_button">Follow us on <b>Twitter</b></string>
    <string name="about_website_button">www.dts.com</string>
    <string name="action_settings">Settings</string>
    <string name="add_branded_headphone">Add branded headphone</string>
    <string name="agreement_button">Accept &amp; Continue</string>
    <string name="agreement_check">Help improve DTS products by sending crash incidents and usage statistics to DTS</string>
    <string name="agreement_content">By clicking \"Accept &amp; Continue\" and using this app, you agree to the DTS End User License Agreement.</string>
    <string name="agreement_license">End User License Agreement</string>
    <string name="agreement_thirdparty_notice">Third Party Notice</string>
    <string name="app_name">DTS:X Ultra</string>
    <string name="app_short_name">DTS:X Ultra</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio">Audio</string>
    <string name="audio_preference_actionbar_title">Personal Audio Preferences</string>
    <string name="audio_preference_bass_title">Bass Boost</string>
    <string name="audio_preference_dialog_title">Dialog Enhancement</string>
    <string name="audio_preference_percent">%</string>
    <string name="audio_preference_slider_content_modes_title">Content Modes</string>
    <string name="audio_preference_slider_title">Audio Levels</string>
    <string name="audio_preference_title">Personal Audio Preferences</string>
    <string name="audio_preference_treble_title">Treble Boost</string>
    <string name="audioroute_bluetooth">" Bluetooth."</string>
    <string name="audioroute_choose">current device is:</string>
    <string name="audioroute_lineout">" Line-Out."</string>
    <string name="audioroute_speakers">" Speakers."</string>
    <string name="audioroute_unknown">Unknown</string>
    <string name="audioroute_usb">" USB."</string>
    <string name="blank" />
    <string name="bluetooth_actionbar_title">Bluetooth headphones</string>
    <string name="bluetooth_autoswitch_subtitle">Automatically apply audio tunings when known</string>
    <string name="bluetooth_autoswitch_title">Bluetooth auto tuning</string>
    <string name="bluetooth_reset_subtitle">Clear list of automatically applied audio tunings for Bluetooth accessories</string>
    <string name="bluetooth_reset_title">Reset Bluetooth tunings</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brand_actionbar_title">Brands</string>
    <string name="bypass_mode_on_warning">Bypass mode on !! Turn off and try again !!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_exit_home">Cancel and Exit to Home</string>
    <string name="car_audio">Car Audio</string>
    <string name="cd_about_facebook">DTS Facebook Page</string>
    <string name="cd_about_website">DTS:X Ultra Website Link</string>
    <string name="cd_next">Show the next page</string>
    <string name="cd_previous">Show the previous page</string>
    <string name="change">Change</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_updates">Check for updates</string>
    <string name="check_updates_summary">Download latest tunings and data from DWS</string>
    <string name="close">Close</string>
    <string name="cont">Continue</string>
    <string name="contentmode_actionbar_title">Content mode</string>
    <string name="contentmode_attached0">Normal</string>
    <string name="contentmode_attached1">Bypass</string>
    <string name="contentmode_attached2">Music</string>
    <string name="contentmode_attached3">Movies</string>
    <string name="contentmode_attached4">Voice</string>
    <string name="contentmode_attached5">Game 1</string>
    <string name="contentmode_attached6">Game 2</string>
    <string name="contentmode_attached7">Game 3</string>
    <string name="contentmode_attached8">Custom</string>
    <string name="debug_menu">Debug menu</string>
    <string name="demo_actionbar_title">Demo features</string>
    <string name="dialog_bluetooth_volume_down">Please return your Bluetooth headphones to their normal volume level.</string>
    <string name="dialog_bluetooth_volume_up">Please set the volume on your Bluetooth headphones to the highest level.</string>
    <string name="dialog_bluetooth_volume_up_title">Listening Profile Setup</string>
    <string name="dismiss">Dismiss</string>
    <string name="earbuds">Earbuds</string>
    <string name="earphone">Earphone</string>
    <string name="equalizer_actionbar_title">Graphic equalizer</string>
    <string name="exit">Exit</string>
    <string name="export">Export</string>
    <string name="external_speaker">External Speaker</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="general_activeroute_title">Active audio route</string>
    <string name="general_bluetooth_title">Bluetooth headphones</string>
    <string name="general_contentmode_title">Content mode</string>
    <string name="general_demo_subtitle">Screen showcasing several demo-able features</string>
    <string name="general_demo_title">Demo screen</string>
    <string name="general_dts_subtitle">Panoramic surround sound</string>
    <string name="general_dts_title">DTS:X Ultra</string>
    <string name="general_equalizer_title">Graphic equalizer</string>
    <string name="general_headphone_none">Please adapt the equipment(Default:none)</string>
    <string name="general_headphone_title">Wired headphones</string>
    <string name="general_preference_title">Stereo preference</string>
    <string name="general_profile_subtitle">Personalized tunings for your ears</string>
    <string name="general_profile_title">Listening profile</string>
    <string name="ha_adjust_volume">Set Max Volume,Dial down the volume until you can barely hear the sound. Then press Next.</string>
    <string name="listening_custom_preset1">Perfect hearing: -30dB -30dB -30dB -20dB</string>
    <string name="listening_custom_preset2">Poor hearing: -99dB -20dB -20dB -10dB</string>
    <string name="listening_custom_subtitle">Currently set listening test values in dB. Tap to set custom listening test values</string>
    <string name="listening_custom_title">Listening test values</string>
    <string name="listening_custom_user">User setting:</string>
    <string name="listening_title">Listening test</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_summary">Show Android notifications for change in audio route, web update status, and bluetooth device connection</string>
    <string name="personal">Personal</string>
    <string name="preference_infront_subtitle">Brings the sound out and to the front, like two speakers in front of your head</string>
    <string name="preference_infront_title">In-front</string>
    <string name="preference_title">Preferred sound for stereo content</string>
    <string name="preference_traditional_subtitle">Brings the sound close to your head for a more traditional headphone experience</string>
    <string name="preference_traditional_title">Traditional</string>
    <string name="preference_wide_subtitle">Enhances the spaciousness of the original stereo recording</string>
    <string name="preference_wide_title">Wide</string>
    <string name="previous">Previous</string>
    <string name="reset_profile">Reset Listening profile</string>
    <string name="reset_settings">Reset</string>
    <string name="reset_summary">Resets listening profile (bypass)</string>
    <string name="reset_user">Reset to OEM default</string>
    <string name="reset_user_summary">Reset all tunings to OEM default</string>
    <string name="usb_autoswitch_subtitle">Automatically apply audio tunings when known</string>
    <string name="usb_autoswitch_title">USB auto tuning</string>
    <string name="usb_reset_subtitle">Clear list of automatically applied audio tunings for USB accessories</string>
    <string name="usb_reset_title">Reset USB tunings</string>
</resources>