<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/settings_layout_personal" android:background="@color/white" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/layout_margin" android:translationZ="@dimen/general_translation" android:elevation="@dimen/general_elevation">
            <TextView android:paddingLeft="@dimen/standard_margin" android:paddingTop="@dimen/standard_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/personal" style="@style/H3" />
            <RelativeLayout android:id="@id/settings_layout_notifications" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/settings_notification_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/notifications" style="@style/text_standard" />
                <Switch android:theme="@style/switchStyle" android:id="@id/settings_dts_switch" android:paddingLeft="30.0dip" android:paddingTop="26.0dip" android:paddingRight="16.0dip" android:paddingBottom="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/blank" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0dip" android:text="@string/notifications_summary" android:layout_below="@id/settings_notification_title" android:layout_alignStart="@id/settings_notification_title" style="@style/text_subtext" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_bluetooth_autoswitch" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:id="@id/settings_bluetooth_autoswitch_line" android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" />
                <TextView android:id="@id/settings_bluetooth_autoswitch_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/bluetooth_autoswitch_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0dip" android:layout_marginBottom="@dimen/list_margin" android:text="@string/bluetooth_autoswitch_subtitle" android:layout_below="@id/settings_bluetooth_autoswitch_title" android:layout_alignStart="@id/settings_bluetooth_autoswitch_title" style="@style/text_subtext" />
                <Switch android:theme="@style/switchStyle" android:id="@id/settings_bluetooth_autoswitch_switch" android:paddingLeft="30.0dip" android:paddingTop="26.0dip" android:paddingRight="16.0dip" android:paddingBottom="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/blank" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_bluetooth_reset" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" />
                <TextView android:id="@id/settings_bluetooth_reset_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/bluetooth_reset_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0dip" android:layout_marginBottom="@dimen/list_margin" android:text="@string/bluetooth_reset_subtitle" android:layout_below="@id/settings_bluetooth_reset_title" android:layout_alignStart="@id/settings_bluetooth_reset_title" style="@style/text_subtext" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_usb_autoswitch" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:id="@id/settings_usb_autoswitch_line" android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" />
                <TextView android:id="@id/settings_usb_autoswitch_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/usb_autoswitch_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0dip" android:layout_marginBottom="@dimen/list_margin" android:text="@string/usb_autoswitch_subtitle" android:layout_below="@id/settings_usb_autoswitch_title" android:layout_alignStart="@id/settings_usb_autoswitch_title" style="@style/text_subtext" />
                <Switch android:theme="@style/switchStyle" android:id="@id/settings_usb_autoswitch_switch" android:paddingLeft="30.0dip" android:paddingTop="26.0dip" android:paddingRight="16.0dip" android:paddingBottom="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:text="@string/blank" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_usb_reset" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" />
                <TextView android:id="@id/settings_usb_reset_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/usb_reset_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="80.0dip" android:layout_marginBottom="@dimen/list_margin" android:text="@string/usb_reset_subtitle" android:layout_below="@id/settings_usb_reset_title" android:layout_alignStart="@id/settings_usb_reset_title" style="@style/text_subtext" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:translationZ="@dimen/general_translation" android:elevation="@dimen/general_elevation">
            <TextView android:paddingLeft="@dimen/standard_margin" android:paddingTop="@dimen/standard_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/reset_settings" style="@style/H3" />
            <RelativeLayout android:id="@id/settings_layout_profile" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/settings_profile_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/reset_profile" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/list_margin" android:text="@string/reset_summary" android:layout_below="@id/settings_profile_title" android:layout_alignStart="@id/settings_profile_title" style="@style/text_subtext" />
                <View android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/settings_layout_reset" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/settings_reset_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/reset_user" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/list_margin" android:text="@string/reset_user_summary" android:layout_below="@id/settings_reset_title" android:layout_alignStart="@id/settings_reset_title" style="@style/text_subtext" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>