<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/demo_listening_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/layout_margin" android:translationZ="@dimen/general_translation" android:elevation="@dimen/general_elevation">
            <TextView android:id="@id/demo_listening_title" android:paddingLeft="@dimen/standard_margin" android:paddingTop="@dimen/standard_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listening_title" style="@style/H3" />
            <RelativeLayout android:id="@id/demo_layout_listening_custom" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:animateLayoutChanges="true">
                <TextView android:id="@id/demo_listening_custom_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/listening_custom_title" style="@style/text_standard" />
                <TextView android:id="@id/demo_listening_custom_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/list_margin" android:text="@string/listening_custom_subtitle" android:layout_below="@id/demo_listening_custom_title" android:layout_alignStart="@id/demo_listening_custom_title" style="@style/text_subtext" />
                <TextView android:id="@id/demo_listening_custom_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0dip" android:layout_marginBottom="@dimen/list_margin" android:layout_below="@id/demo_listening_custom_subtitle" android:layout_alignStart="@id/demo_listening_custom_subtitle" style="@style/text_subtext" />
                <RelativeLayout android:id="@id/demo_layout_listening_custom_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_below="@id/demo_listening_custom_value" android:animateLayoutChanges="true">
                    <RadioGroup android:id="@id/demo_listening_custom_radiogroup" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="8.0dip">
                        <RadioButton android:id="@id/demo_listening_custom_user" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listening_custom_user" style="@style/text_subtext" />
                        <RadioButton android:id="@id/demo_listening_custom_radio1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listening_custom_preset1" style="@style/text_subtext" />
                        <RadioButton android:id="@id/demo_listening_custom_radio2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/listening_custom_preset2" style="@style/text_subtext" />
                    </RadioGroup>
                </RelativeLayout>
            </RelativeLayout>
            <View android:background="@color/off_white" android:layout_width="wrap_content" android:layout_height="1.0dip" />
            <RelativeLayout android:id="@id/demo_layout_listening_reset" android:background="?android:selectableItemBackground" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/demo_profile_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginTop="@dimen/list_margin" android:text="@string/reset_profile" style="@style/text_standard" />
                <TextView android:id="@id/demo_profile_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/list_margin" android:text="@string/reset_summary" android:layout_below="@id/demo_profile_title" android:layout_alignStart="@id/demo_profile_title" style="@style/text_subtext" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>