<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/black" android:id="@id/tv_roto_title" android:paddingTop="@dimen/quarter_margin" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:text="@string/ha_adjust_volume" style="@style/text_large" />
    <com.dts.dtsxultra.listeningprofile.RotaryKnob android:id="@id/ha_test_tone_rotary_knob" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/standard_margin" android:layout_marginRight="@dimen/standard_margin" android:layout_marginBottom="@dimen/standard_margin" android:layout_below="@id/tv_roto_title" />
    <View android:background="@color/lp_divider_top_bottom" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_above="@id/ll_buttons" />
    <RelativeLayout android:orientation="horizontal" android:id="@id/ll_buttons" android:background="@color/lp_dial_button" android:layout_width="fill_parent" android:layout_height="40.0dip" android:weightSum="1.0" android:layout_alignParentBottom="true">
        <Button android:textColor="@color/button_transparent_text" android:gravity="center|left" android:layout_gravity="left" android:id="@id/ha_test_tone_viewflipper_previous_btn" android:background="@color/transparent" android:paddingLeft="@dimen/standard_margin" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/previous" android:drawableLeft="@drawable/lp_button_chevron_left" android:drawablePadding="3.0dip" android:layout_alignParentTop="true" android:contentDescription="@string/cd_previous" android:layout_alignParentStart="true" style="@style/text_standard" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/viewPagerCountDots" android:layout_width="100.0dip" android:layout_height="fill_parent" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <Button android:textColor="@color/button_transparent_text" android:gravity="center|right" android:layout_gravity="right" android:id="@id/ha_test_tone_viewflipper_next_btn" android:background="@color/transparent" android:paddingRight="30.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/next" android:drawableRight="@drawable/lp_button_chevron_right" android:drawablePadding="6.0dip" android:layout_alignParentTop="true" android:contentDescription="@string/cd_next" android:layout_alignParentEnd="true" style="@style/text_standard" />
    </RelativeLayout>
</RelativeLayout>