<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:paddingLeft="@dimen/standard_margin" android:paddingTop="@dimen/standard_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/preference_title" style="@style/H3" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/preference_layout_wide" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/list_margin" android:paddingBottom="@dimen/list_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="@dimen/list_icon_size" android:layout_height="@dimen/list_icon_size" android:layout_marginLeft="@dimen/standard_margin" android:src="@drawable/dts_stereo_pref_wide" android:layout_centerVertical="true" />
                <TextView android:id="@id/preference_wide_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/general_option_margin" android:text="@string/preference_wide_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/general_option_margin" android:text="@string/preference_wide_subtitle" android:layout_below="@id/preference_wide_title" android:layout_alignStart="@id/preference_wide_title" style="@style/text_subtext" />
                <RadioButton android:id="@id/preference_wide_button" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/standard_margin" android:checked="false" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/preference_layout_infront" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/list_margin" android:paddingBottom="@dimen/list_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="@dimen/list_icon_size" android:layout_height="@dimen/list_icon_size" android:layout_marginLeft="@dimen/standard_margin" android:src="@drawable/dts_stereo_pref_infront" android:layout_centerVertical="true" />
                <TextView android:id="@id/preference_infront_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/general_option_margin" android:text="@string/preference_infront_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/general_option_margin" android:text="@string/preference_infront_subtitle" android:layout_below="@id/preference_infront_title" android:layout_alignStart="@id/preference_infront_title" style="@style/text_subtext" />
                <RadioButton android:id="@id/preference_infront_button" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/standard_margin" android:checked="false" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/preference_layout_traditional" android:background="?android:selectableItemBackground" android:paddingTop="@dimen/list_margin" android:paddingBottom="@dimen/list_margin" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="@dimen/list_icon_size" android:layout_height="@dimen/list_icon_size" android:layout_marginLeft="@dimen/standard_margin" android:src="@drawable/dts_stereo_pref_traditional" android:layout_centerVertical="true" />
                <TextView android:id="@id/preference_traditional_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/general_option_margin" android:text="@string/preference_traditional_title" style="@style/text_standard" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/general_option_margin" android:text="@string/preference_traditional_subtitle" android:layout_below="@id/preference_traditional_title" android:layout_alignStart="@id/preference_traditional_title" style="@style/text_subtext" />
                <RadioButton android:id="@id/preference_traditional_button" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/standard_margin" android:checked="false" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>